Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -73,12 +73,15 @@
             </form>
         </section>
 
+        <section id="consultas-dia">
+            <h2>Consultas do Dia</h2>
+            <div id="consultasHoje"></div>
+        </section>
+
         <section id="consultas-mes">
             <h2>Consultas por Mês</h2>
             <div id="consultasPorMes"></div>
         </section>
-
-        <div id="resultadoConsulta"></div>
     </div>
 
     <script src="scripts.js"></script>
