--- a/index.html
+++ b/index.html
@@ -3,87 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciamento de Consultas - FonoClinic</title>
+    <title>Gerenciamento de Consultas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Gerenciamento de Consultas - FonoClinic</h1>
+        <h1>Gerenciamento de Consultas</h1>
 
-        <section id="filtro-consultas">
+        <!-- Filtro de Consultas -->
+        <div id="filtro-consultas">
             <h2>Filtro de Consultas</h2>
-            <form id="form-filtro">
-                <div class="form-group">
-                    <label for="filtroEspecialidade">Especialidade:</label>
-                    <input type="text" id="filtroEspecialidade" placeholder="Digite a especialidade">
-                </div>
-                <div class="form-group">
-                    <label for="filtroData">Data:</label>
-                    <input type="date" id="filtroData">
-                </div>
-                <button type="button" onclick="filtrarConsultas()" class="btn">Confirmar</button>
-            </form>
-            <div id="filtroResultados"></div>
-        </section>
+            <div class="form-group">
+                <label for="especialidade">Especialidade:</label>
+                <input type="text" id="especialidade">
+            </div>
+            <div class="form-group">
+                <label for="data-consulta">Data:</label>
+                <input type="date" id="data-consulta">
+            </div>
+            <button class="btn" onclick="filtrarConsultas()">Confirmar</button>
+        </div>
 
-        <section id="cadastro-consultas">
+        <!-- Cadastro de Consultas -->
+        <div id="cadastro-consultas">
             <h2>Cadastro de Consultas</h2>
-            <form id="form-cadastro">
-                <div class="form-group">
-                    <label for="nomePaciente">Nome do Paciente:</label>
-                    <input type="text" id="nomePaciente" required>
-                </div>
-                <div class="form-group">
-                    <label for="responsavel">Responsável:</label>
-                    <input type="text" id="responsavel">
-                </div>
-                <div class="form-group">
-                    <label for="idade">Idade:</label>
-                    <input type="number" id="idade">
-                </div>
-                <div class="form-group">
-                    <label for="telefone">Telefone:</label>
-                    <input type="tel" id="telefone">
-                </div>
-                <div class="form-group">
-                    <label for="especialista">Especialidade:</label>
-                    <input type="text" id="especialista">
-                </div>
-                <div class="form-group">
-                    <label for="consultorio">Consultório:</label>
-                    <select id="consultorio">
-                        <option value="Consultório 1">Consultório 1</option>
-                        <option value="Consultório 2">Consultório 2</option>
-                        <option value="Consultório 3">Consultório 3</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="dataConsulta">Data da Consulta:</label>
-                    <input type="date" id="dataConsulta">
-                </div>
-                <div class="form-group">
-                    <label for="horarioConsulta">Horário da Consulta:</label>
-                    <input type="time" id="horarioConsulta">
-                </div>
-                <div class="form-group">
-                    <label for="recomendacoes">Recomendações:</label>
-                    <textarea id="recomendacoes"></textarea>
-                </div>
-                <button type="button" onclick="salvarConsulta()" class="btn">Salvar Consulta</button>
-            </form>
-        </section>
+            <div class="form-group">
+                <label for="nome-paciente">Nome do Paciente:</label>
+                <input type="text" id="nome-paciente">
+            </div>
+            <div class="form-group">
+                <label for="responsavel">Responsável:</label>
+                <input type="text" id="responsavel">
+            </div>
+            <div class="form-group">
+                <label for="idade">Idade:</label>
+                <input type="number" id="idade">
+            </div>
+            <div class="form-group">
+                <label for="telefone">Telefone:</label>
+                <input type="tel" id="telefone">
+            </div>
+            <div class="form-group">
+                <label for="especialista">Especialista:</label>
+                <input type="text" id="especialista">
+            </div>
+            <div class="form-group">
+                <label for="consultorio">Consultório:</label>
+                <input type="text" id="consultorio">
+            </div>
+            <div class="form-group">
+                <label for="data-consulta">Data da Consulta:</label>
+                <input type="date" id="data-consulta-cadastro">
+            </div>
+            <div class="form-group">
+                <label for="hora-consulta">Horário da Consulta:</label>
+                <input type="time" id="hora-consulta">
+            </div>
+            <button class="btn" id="salvarConsulta" onclick="salvarConsulta()">Salvar Consulta</button>
+        </div>
 
-        <section id="consultas-dia">
-            <h2>Consultas do Dia</h2>
-            <div id="consultasHoje"></div>
-        </section>
-
-        <section id="consultas-mes">
+        <!-- Consultas por Mês e Dia -->
+        <div id="consultas-mes">
             <h2>Consultas por Mês</h2>
-            <div id="consultasPorMes"></div>
-        </section>
+            <div id="consultasPorMes"></div> <!-- Onde os meses serão exibidos -->
+            <div id="diasDoMes"></div> <!-- Onde os dias dos meses serão exibidos -->
+        </div>
+
+        <div id="resultadoConsulta"></div>
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
