--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,52 +9,75 @@
 <body>
     <h1>Gerenciamento de Consultas - FonoClinic</h1>
 
-    <!-- Filtro de Consultas -->
     <section id="filtro-consultas">
         <h2>Filtro de Consultas</h2>
-        <label for="especialidade">Especialidade:</label>
-        <input type="text" id="especialidade" name="especialidade">
-        <label for="data-consulta">Data:</label>
-        <input type="date" id="data-consulta" name="data-consulta">
-        <button id="confirmar">Confirmar</button>
-    </section>
+        <form>
+            <label for="especialidade">Especialidade:</label>
+            <input type="text" id="especialidade" name="especialidade">
 
-    <!-- Cadastro de Consultas -->
-    <section id="cadastro-consultas">
-        <h2>Cadastro de Consultas</h2>
-        <form id="form-consulta">
-            <label for="nome-paciente">Nome do Paciente:</label>
-            <input type="text" id="nome-paciente" name="nome-paciente">
-            <label for="responsavel">Responsável:</label>
-            <input type="text" id="responsavel" name="responsavel">
-            <label for="idade">Idade:</label>
-            <input type="number" id="idade" name="idade">
-            <label for="telefone">Telefone:</label>
-            <input type="text" id="telefone" name="telefone">
-            <label for="especialidade-cadastro">Especialidade:</label>
-            <input type="text" id="especialidade-cadastro" name="especialidade-cadastro">
-            <label for="consultorio">Consultório:</label>
-            <select id="consultorio" name="consultorio">
-                <option value="Consultório 1">Consultório 1</option>
-                <option value="Consultório 2">Consultório 2</option>
-            </select>
-            <label for="data-consulta-cadastro">Data da Consulta:</label>
-            <input type="date" id="data-consulta-cadastro" name="data-consulta-cadastro">
-            <label for="hora-consulta">Horário da Consulta:</label>
-            <input type="time" id="hora-consulta" name="hora-consulta">
-            <label for="recomendacoes">Recomendações:</label>
-            <textarea id="recomendacoes" name="recomendacoes"></textarea>
-            <button type="button" id="salvar-consulta">Salvar Consulta</button>
+            <label for="data">Data:</label>
+            <input type="date" id="data" name="data">
+            
+            <button type="button" onclick="filtrarConsultas()">Confirmar</button>
         </form>
     </section>
 
-    <!-- Consultas Diárias -->
-    <section id="consultas-diarias">
-        <h2>Consultas do Dia</h2>
-        <div id="consultas-dia-content"></div>
+    <section id="cadastro-consultas">
+        <h2>Cadastro de Consultas</h2>
+        <form id="cadastroForm">
+            <div class="form-row">
+                <div>
+                    <label for="nome-paciente">Nome do Paciente:</label>
+                    <input type="text" id="nome-paciente" name="nome-paciente">
+                </div>
+                <div>
+                    <label for="responsavel">Responsável:</label>
+                    <input type="text" id="responsavel" name="responsavel">
+                </div>
+                <div>
+                    <label for="idade">Idade:</label>
+                    <input type="number" id="idade" name="idade">
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div>
+                    <label for="telefone">Telefone:</label>
+                    <input type="text" id="telefone" name="telefone">
+                </div>
+                <div>
+                    <label for="especialidade">Especialidade:</label>
+                    <input type="text" id="especialidade-cadastro" name="especialidade">
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div>
+                    <label for="consultorio">Consultório:</label>
+                    <input type="text" id="consultorio" name="consultorio">
+                </div>
+                <div>
+                    <label for="data-consulta">Data da Consulta:</label>
+                    <input type="date" id="data-consulta" name="data-consulta">
+                </div>
+                <div>
+                    <label for="horario">Horário da Consulta:</label>
+                    <input type="time" id="horario" name="horario">
+                </div>
+            </div>
+
+            <label for="recomendacoes">Recomendações:</label>
+            <textarea id="recomendacoes" name="recomendacoes"></textarea>
+
+            <button type="button" onclick="salvarConsulta()">Salvar Consulta</button>
+        </form>
     </section>
 
-    <!-- Consultas Mensais -->
+    <section id="consultas-diarias">
+        <h2>Consultas do Dia</h2>
+        <!-- Resultados de consultas diárias serão inseridos aqui -->
+    </section>
+
     <section id="consultas-mensais">
         <h2>Consultas por Mês</h2>
         <div id="consultas-mes-content"></div>
