--- a/index.html
+++ b/index.html
@@ -9,80 +9,57 @@
 <body>
     <h1>Gerenciamento de Consultas - FonoClinic</h1>
 
+    <!-- Filtro de Consultas -->
     <section id="filtro-consultas">
         <h2>Filtro de Consultas</h2>
-        <form>
+        <form id="filtro-form">
             <label for="especialidade">Especialidade:</label>
             <input type="text" id="especialidade" name="especialidade">
-
             <label for="data">Data:</label>
             <input type="date" id="data" name="data">
-            
-            <button type="button" onclick="filtrarConsultas()">Confirmar</button>
+            <button type="button" id="confirmar-btn">Confirmar</button>
         </form>
     </section>
 
+    <!-- Cadastro de Consultas -->
     <section id="cadastro-consultas">
         <h2>Cadastro de Consultas</h2>
-        <form id="cadastroForm">
-            <div class="form-row">
-                <div>
-                    <label for="nome-paciente">Nome do Paciente:</label>
-                    <input type="text" id="nome-paciente" name="nome-paciente">
-                </div>
-                <div>
-                    <label for="responsavel">Responsável:</label>
-                    <input type="text" id="responsavel" name="responsavel">
-                </div>
-                <div>
-                    <label for="idade">Idade:</label>
-                    <input type="number" id="idade" name="idade">
-                </div>
-            </div>
-
-            <div class="form-row">
-                <div>
-                    <label for="telefone">Telefone:</label>
-                    <input type="text" id="telefone" name="telefone">
-                </div>
-                <div>
-                    <label for="especialidade">Especialidade:</label>
-                    <input type="text" id="especialidade-cadastro" name="especialidade">
-                </div>
-            </div>
-
-            <div class="form-row">
-                <div>
-                    <label for="consultorio">Consultório:</label>
-                    <input type="text" id="consultorio" name="consultorio">
-                </div>
-                <div>
-                    <label for="data-consulta">Data da Consulta:</label>
-                    <input type="date" id="data-consulta" name="data-consulta">
-                </div>
-                <div>
-                    <label for="horario">Horário da Consulta:</label>
-                    <input type="time" id="horario" name="horario">
-                </div>
-            </div>
-
+        <form id="cadastro-form">
+            <label for="nome-paciente">Nome do Paciente:</label>
+            <input type="text" id="nome-paciente" name="nome-paciente">
+            <label for="responsavel">Responsável:</label>
+            <input type="text" id="responsavel" name="responsavel">
+            <label for="idade">Idade:</label>
+            <input type="number" id="idade" name="idade">
+            <label for="telefone">Telefone:</label>
+            <input type="text" id="telefone" name="telefone">
+            <label for="especialidade-cadastro">Especialidade:</label>
+            <input type="text" id="especialidade-cadastro" name="especialidade-cadastro">
+            <label for="consultorio">Consultório:</label>
+            <input type="text" id="consultorio" name="consultorio">
+            <label for="data-consulta">Data da Consulta:</label>
+            <input type="date" id="data-consulta" name="data-consulta">
+            <label for="horario-consulta">Horário da Consulta:</label>
+            <input type="time" id="horario-consulta" name="horario-consulta">
             <label for="recomendacoes">Recomendações:</label>
             <textarea id="recomendacoes" name="recomendacoes"></textarea>
-
-            <button type="button" onclick="salvarConsulta()">Salvar Consulta</button>
+            <button type="button" id="salvar-consulta-btn">Salvar Consulta</button>
         </form>
     </section>
 
-    <section id="consultas-diarias">
+    <!-- Consultas Diárias -->
+    <section id="consultas-dia">
         <h2>Consultas do Dia</h2>
-        <!-- Resultados de consultas diárias serão inseridos aqui -->
+        <div id="consultas-diarias-lista"></div>
     </section>
 
-    <section id="consultas-mensais">
+    <!-- Consultas por Mês -->
+    <section id="consultas-mes">
         <h2>Consultas por Mês</h2>
-        <div id="consultas-mes-content"></div>
+        <div id="consultas-mensais-lista"></div>
     </section>
 
+    <!-- Referência correta ao script.js -->
     <script src="script.js"></script>
 </body>
 </html>
