--- a/index.html
+++ b/index.html
@@ -7,59 +7,74 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Gerenciamento de Consultas - FonoClinic</h1>
+    <header>
+        <h1>Gerenciamento de Consultas - FonoClinic</h1>
+    </header>
 
     <!-- Filtro de Consultas -->
-    <section id="filtro-consultas">
+    <section class="form-section">
         <h2>Filtro de Consultas</h2>
-        <form id="filtro-form">
-            <label for="especialidade">Especialidade:</label>
-            <input type="text" id="especialidade" name="especialidade">
-            <label for="data">Data:</label>
-            <input type="date" id="data" name="data">
-            <button type="button" id="confirmar-btn">Confirmar</button>
+        <form id="filtro-form" class="form-layout">
+            <div class="form-group">
+                <label for="especialidade">Especialidade:</label>
+                <input type="text" id="especialidade" name="especialidade">
+            </div>
+            <div class="form-group">
+                <label for="data">Data:</label>
+                <input type="date" id="data" name="data">
+            </div>
+            <button type="button" id="confirmar-btn" class="btn">Confirmar</button>
         </form>
     </section>
 
     <!-- Cadastro de Consultas -->
-    <section id="cadastro-consultas">
+    <section class="form-section">
         <h2>Cadastro de Consultas</h2>
-        <form id="cadastro-form">
-            <label for="nome-paciente">Nome do Paciente:</label>
-            <input type="text" id="nome-paciente" name="nome-paciente">
-            <label for="responsavel">Responsável:</label>
-            <input type="text" id="responsavel" name="responsavel">
-            <label for="idade">Idade:</label>
-            <input type="number" id="idade" name="idade">
-            <label for="telefone">Telefone:</label>
-            <input type="text" id="telefone" name="telefone">
-            <label for="especialidade-cadastro">Especialidade:</label>
-            <input type="text" id="especialidade-cadastro" name="especialidade-cadastro">
-            <label for="consultorio">Consultório:</label>
-            <input type="text" id="consultorio" name="consultorio">
-            <label for="data-consulta">Data da Consulta:</label>
-            <input type="date" id="data-consulta" name="data-consulta">
-            <label for="horario-consulta">Horário da Consulta:</label>
-            <input type="time" id="horario-consulta" name="horario-consulta">
-            <label for="recomendacoes">Recomendações:</label>
-            <textarea id="recomendacoes" name="recomendacoes"></textarea>
-            <button type="button" id="salvar-consulta-btn">Salvar Consulta</button>
+        <form id="cadastro-form" class="form-layout">
+            <div class="form-group">
+                <label for="nome-paciente">Nome do Paciente:</label>
+                <input type="text" id="nome-paciente" name="nome-paciente">
+            </div>
+            <div class="form-group">
+                <label for="responsavel">Responsável:</label>
+                <input type="text" id="responsavel" name="responsavel">
+                <label for="idade">Idade:</label>
+                <input type="number" id="idade" name="idade">
+            </div>
+            <div class="form-group">
+                <label for="telefone">Telefone:</label>
+                <input type="text" id="telefone" name="telefone">
+                <label for="especialidade-cadastro">Especialidade:</label>
+                <input type="text" id="especialidade-cadastro" name="especialidade-cadastro">
+            </div>
+            <div class="form-group">
+                <label for="consultorio">Consultório:</label>
+                <input type="text" id="consultorio" name="consultorio">
+                <label for="data-consulta">Data da Consulta:</label>
+                <input type="date" id="data-consulta" name="data-consulta">
+                <label for="horario-consulta">Horário da Consulta:</label>
+                <input type="time" id="horario-consulta" name="horario-consulta">
+            </div>
+            <div class="form-group">
+                <label for="recomendacoes">Recomendações:</label>
+                <textarea id="recomendacoes" name="recomendacoes"></textarea>
+            </div>
+            <button type="button" id="salvar-consulta-btn" class="btn">Salvar Consulta</button>
         </form>
     </section>
 
     <!-- Consultas Diárias -->
-    <section id="consultas-dia">
+    <section class="form-section">
         <h2>Consultas do Dia</h2>
         <div id="consultas-diarias-lista"></div>
     </section>
 
     <!-- Consultas por Mês -->
-    <section id="consultas-mes">
+    <section class="form-section">
         <h2>Consultas por Mês</h2>
         <div id="consultas-mensais-lista"></div>
     </section>
 
-    <!-- Referência correta ao script.js -->
     <script src="script.js"></script>
 </body>
 </html>
