--- a/index.html
+++ b/index.html
@@ -3,78 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciamento de Consultas - FonoClinic</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS -->
+    <title>FonoClinic</title>
 </head>
 <body>
     <header>
-        <h1>Gerenciamento de Consultas - FonoClinic</h1>
+        <h1>Cadastro de Consultas</h1>
     </header>
 
-    <!-- Filtro de Consultas -->
-    <section class="form-section">
-        <h2>Filtro de Consultas</h2>
-        <form id="filtro-form" class="form-layout">
-            <div class="form-group">
-                <label for="especialidade">Especialidade:</label>
-                <input type="text" id="especialidade" name="especialidade">
-            </div>
-            <div class="form-group">
-                <label for="data">Data:</label>
-                <input type="date" id="data" name="data">
-            </div>
-            <button type="button" id="confirmar-btn" class="btn">Confirmar</button>
+    <div class="filter-section">
+        <h2>Filtrar Consultas</h2>
+        <label for="especialidade">Especialidade:</label>
+        <input type="text" id="especialidade" name="especialidade">
+        <label for="data">Data:</label>
+        <input type="date" id="data" name="data">
+        <label for="horario">Horário:</label>
+        <input type="time" id="horario" name="horario">
+        <button id="filterBtn">Confirmar</button>
+    </div>
+
+    <div class="cadastro">
+        <h2>Cadastro de Pacientes</h2>
+        <form id="cadastroForm">
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" name="nome" required>
+            <label for="responsavel">Responsável:</label>
+            <input type="text" id="responsavel" name="responsavel" required>
+            <label for="idade">Idade:</label>
+            <input type="number" id="idade" name="idade" required>
+            <label for="consultorio">Consultório:</label>
+            <input type="text" id="consultorio" name="consultorio" required>
+            <label for="especialidadeCadastro">Especialidade:</label>
+            <input type="text" id="especialidadeCadastro" name="especialidadeCadastro" required>
+            <label for="dataConsulta">Data da Consulta:</label>
+            <input type="date" id="dataConsulta" name="dataConsulta" required>
+            <label for="horarioConsulta">Horário da Consulta:</label>
+            <input type="time" id="horarioConsulta" name="horarioConsulta" required>
+            <button type="submit" id="salvarBtn">Salvar Consulta</button>
         </form>
-    </section>
+    </div>
 
-    <!-- Cadastro de Consultas -->
-    <section class="form-section">
-        <h2>Cadastro de Consultas</h2>
-        <form id="cadastro-form" class="form-layout">
-            <div class="form-group">
-                <label for="nome-paciente">Nome do Paciente:</label>
-                <input type="text" id="nome-paciente" name="nome-paciente">
-            </div>
-            <div class="form-group">
-                <label for="responsavel">Responsável:</label>
-                <input type="text" id="responsavel" name="responsavel">
-                <label for="idade">Idade:</label>
-                <input type="number" id="idade" name="idade">
-            </div>
-            <div class="form-group">
-                <label for="telefone">Telefone:</label>
-                <input type="text" id="telefone" name="telefone">
-                <label for="especialidade-cadastro">Especialidade:</label>
-                <input type="text" id="especialidade-cadastro" name="especialidade-cadastro">
-            </div>
-            <div class="form-group">
-                <label for="consultorio">Consultório:</label>
-                <input type="text" id="consultorio" name="consultorio">
-                <label for="data-consulta">Data da Consulta:</label>
-                <input type="date" id="data-consulta" name="data-consulta">
-                <label for="horario-consulta">Horário da Consulta:</label>
-                <input type="time" id="horario-consulta" name="horario-consulta">
-            </div>
-            <div class="form-group">
-                <label for="recomendacoes">Recomendações:</label>
-                <textarea id="recomendacoes" name="recomendacoes"></textarea>
-            </div>
-            <button type="button" id="salvar-consulta-btn" class="btn">Salvar Consulta</button>
-        </form>
-    </section>
+    <div class="resultados">
+        <h2>Resultado de Filtro</h2>
+        <div id="resultadoFiltro"></div>
+    </div>
 
-    <!-- Consultas Diárias -->
-    <section class="form-section">
-        <h2>Consultas do Dia</h2>
-        <div id="consultas-diarias-lista"></div>
-    </section>
+    <div class="consultas-mes">
+        <h2>Consultas do Mês</h2>
+        <div id="consultasMes"></div>
+    </div>
 
-    <!-- Consultas por Mês -->
-    <section class="form-section">
-        <h2>Consultas por Mês</h2>
-        <div id="consultas-mensais-lista"></div>
-    </section>
+    <footer>
+        <p>&copy; 2024 FonoClinic</p>
+    </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script> <!-- Link para o JavaScript -->
 </body>
 </html>
