--- a/index.html
+++ b/index.html
@@ -3,99 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FonoClinic - Gerenciamento de Consultas</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Certifique-se de que o arquivo CSS está no caminho correto -->
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS -->
-    <title>FonoClinic - Cadastro de Consultas</title>
 </head>
 <body>
-    <header>
-        <h1>Cadastro de Consultas</h1>
-    </header>
+    <h1>Cadastro de Consultas</h1>
+    <div class="container">
+        <h2>Filtrar Consultas</h2>
+        <label for="especialidadeFiltro">Especialidade:</label>
+        <input type="text" id="especialidadeFiltro" placeholder="Digite a especialidade">
 
-    <div class="form-container">
-        <!-- Seção de Filtro -->
-        <section class="filter-section">
-            <h2>Filtrar Consultas</h2>
-            <form id="filterForm">
-                <div class="form-group">
-                    <label for="especialidade">Especialidade:</label>
-                    <input type="text" id="especialidade" name="especialidade" placeholder="Digite a especialidade">
-                </div>
+        <label for="dataFiltro">Data:</label>
+        <input type="text" id="dataFiltro" placeholder="dd/mm/aaaa">
 
-                <div class="form-group">
-                    <label for="data">Data:</label>
-                    <input type="date" id="data" name="data">
-                </div>
+        <label for="horarioFiltro">Horário:</label>
+        <input type="text" id="horarioFiltro" placeholder="--:--">
+        <button id="filtrarBtn">Confirmar</button>
 
-                <div class="form-group">
-                    <label for="horario">Horário:</label>
-                    <input type="time" id="horario" name="horario">
-                </div>
+        <h2>Cadastro de Pacientes</h2>
+        <label for="nomePaciente">Nome:</label>
+        <input type="text" id="nomePaciente" placeholder="Nome do Paciente">
 
-                <button type="button" id="filterBtn" class="submit-button">Confirmar</button>
-            </form>
-        </section>
+        <label for="responsavel">Responsável:</label>
+        <input type="text" id="responsavel" placeholder="Responsável pelo Paciente">
 
-        <!-- Seção de Cadastro -->
-        <section class="cadastro-section">
-            <h2>Cadastro de Pacientes</h2>
-            <form id="cadastroForm">
-                <div class="form-group">
-                    <label for="nome">Nome:</label>
-                    <input type="text" id="nome" name="nome" placeholder="Nome do Paciente" required>
-                </div>
+        <label for="idade">Idade:</label>
+        <input type="number" id="idade" placeholder="Idade">
 
-                <div class="form-group">
-                    <label for="responsavel">Responsável:</label>
-                    <input type="text" id="responsavel" name="responsavel" placeholder="Responsável pelo Paciente" required>
-                </div>
+        <label for="consultorio">Consultório:</label>
+        <input type="text" id="consultorio" placeholder="Número ou Nome do Consultório">
 
-                <div class="form-group">
-                    <label for="idade">Idade:</label>
-                    <input type="number" id="idade" name="idade" required>
-                </div>
+        <label for="especialidade">Especialidade:</label>
+        <input type="text" id="especialidade" placeholder="Especialidade do Atendimento">
 
-                <div class="form-group">
-                    <label for="consultorio">Consultório:</label>
-                    <input type="text" id="consultorio" name="consultorio" placeholder="Número ou Nome do Consultório" required>
-                </div>
+        <label for="dataConsulta">Data da Consulta:</label>
+        <input type="text" id="dataConsulta" placeholder="dd/mm/aaaa">
 
-                <div class="form-group">
-                    <label for="especialidadeCadastro">Especialidade:</label>
-                    <input type="text" id="especialidadeCadastro" name="especialidadeCadastro" placeholder="Especialidade do Atendimento" required>
-                </div>
+        <label for="horarioConsulta">Horário da Consulta:</label>
+        <input type="text" id="horarioConsulta" placeholder="--:--">
+        
+        <button id="salvarConsultaBtn">Salvar Consulta</button>
 
-                <div class="form-group">
-                    <label for="dataConsulta">Data da Consulta:</label>
-                    <input type="date" id="dataConsulta" name="dataConsulta" required>
-                </div>
+        <h2>Resultado de Filtro</h2>
+        <div id="resultadoFiltro"></div>
 
-                <div class="form-group">
-                    <label for="horarioConsulta">Horário da Consulta:</label>
-                    <input type="time" id="horarioConsulta" name="horarioConsulta" required>
-                </div>
-
-                <button type="submit" id="salvarBtn" class="submit-button">Salvar Consulta</button>
-            </form>
-        </section>
-
-        <!-- Seção de Resultados -->
-        <section class="resultados-section">
-            <h2>Resultado de Filtro</h2>
-            <div id="resultadoFiltro"></div>
-        </section>
-
-        <!-- Seção de Consultas do Mês -->
-        <section class="consultas-mes-section">
-            <h2>Consultas do Mês</h2>
-            <div id="consultasMes"></div>
-        </section>
+        <h2>Consultas do Mês</h2>
+        <div id="consultasMes"></div>
     </div>
 
-    <footer>
-        <p>&copy; 2024 FonoClinic</p>
-    </footer>
-
-    <script src="js/script.js"></script> <!-- Link para o JavaScript -->
+    <script src="script.js"></script> <!-- Certifique-se de que o arquivo JS está no caminho correto -->
 </body>
 </html>
