--- a/index.html
+++ b/index.html
@@ -13,40 +13,59 @@
             <h1>FonoClinic - Gerenciamento de Consultas</h1>
         </header>
 
-        <form id="consultaForm" class="formulario">
+        <!-- Formulário horizontal com molduras -->
+        <form id="consultaForm" class="formulario-horizontal">
             <h2>Cadastro de Paciente</h2>
-            <label for="nomePaciente">Nome do Paciente</label>
-            <input type="text" id="nomePaciente" name="nomePaciente" placeholder="Digite o nome do paciente" required>
 
-            <label for="responsavel">Responsável</label>
-            <input type="text" id="responsavel" name="responsavel" placeholder="Digite o nome do responsável" required>
+            <!-- Grupo de informações principais -->
+            <div class="grupo-campos">
+                <label for="nomePaciente">Nome do Paciente</label>
+                <input type="text" id="nomePaciente" name="nomePaciente" placeholder="Nome do paciente" required>
 
-            <label for="idade">Idade</label>
-            <input type="number" id="idade" name="idade" placeholder="Digite a idade do paciente" required>
+                <label for="responsavel">Responsável</label>
+                <input type="text" id="responsavel" name="responsavel" placeholder="Nome do responsável" required>
+            </div>
 
-            <label for="telefone">Número de Telefone</label>
-            <input type="tel" id="telefone" name="telefone" placeholder="Digite o número de telefone" required>
+            <!-- Grupo de informações adicionais -->
+            <div class="grupo-campos">
+                <label for="idade">Idade</label>
+                <input type="number" id="idade" name="idade" placeholder="Idade do paciente" required>
 
-            <label for="especialidade">Especialidade</label>
-            <input type="text" id="especialidade" name="especialidade" placeholder="Digite a especialidade" required>
+                <label for="telefone">Número de Telefone</label>
+                <input type="tel" id="telefone" name="telefone" placeholder="Telefone de contato" required>
+            </div>
 
-            <label for="consultorio">Consultório</label>
-            <input type="text" id="consultorio" name="consultorio" placeholder="Digite o consultório" required>
+            <!-- Grupo de consulta -->
+            <div class="grupo-campos">
+                <label for="especialidade">Especialidade</label>
+                <input type="text" id="especialidade" name="especialidade" placeholder="Especialidade" required>
 
-            <label for="dataConsulta">Data da Consulta</label>
-            <input type="date" id="dataConsulta" name="dataConsulta" required>
+                <label for="consultorio">Consultório</label>
+                <input type="text" id="consultorio" name="consultorio" placeholder="Consultório" required>
+            </div>
 
-            <label for="horarioConsulta">Horário da Consulta</label>
-            <input type="time" id="horarioConsulta" name="horarioConsulta" required>
+            <!-- Grupo de data e horário -->
+            <div class="grupo-campos">
+                <label for="dataConsulta">Data da Consulta</label>
+                <input type="date" id="dataConsulta" name="dataConsulta" required>
 
-            <button type="submit" class="btn-principal">Salvar Consulta</button>
+                <label for="horarioConsulta">Horário da Consulta</label>
+                <input type="time" id="horarioConsulta" name="horarioConsulta" required>
+            </div>
+
+            <!-- Botão de salvar -->
+            <div class="grupo-campos">
+                <button type="submit" class="btn-principal">Salvar Consulta</button>
+            </div>
         </form>
 
+        <!-- Botões de navegação -->
         <div class="botoes-secundarios">
             <button id="btnHoje" class="btn-secundario">Consultas de Hoje</button>
             <button id="btnConsultasMes" class="btn-secundario">Consultas por Mês</button>
         </div>
 
+        <!-- Áreas para exibir consultas -->
         <section id="consultasDia" class="resultado-consultas"></section>
         <section id="consultasMes" class="resultado-consultas"></section>
     </div>
