Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
         <div class="button-group">
             <button id="consultasDiarias">Consultas Diárias</button>
-            <button id="consultasMes">Consultas por Mês</button>
+            <button id="consultasMes">Consultas do Mês</button>
         </div>
         
         <div id="resultadoFiltro">
